--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "name": "instagram",
-  "alias": "instagram-react",
+  "alias": "instagram-react-fresh",
   "builds": [
     {
       "src": "package.json",
