--- a/package.json
+++ b/package.json
@@ -3,29 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/client": "^3.7.14",
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "@rooks/use-outside-click": "^3.6.0",
     "@tanem/react-nprogress": "^3.0.16",
-    "apollo-boost": "^0.4.7",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-ws": "^1.0.19",
     "date-fns": "^2.10.0",
     "firebase": "^9.22.0",
-    "graphql": "^14.6.0",
+    "graphql": "^16.6.0",
+    "graphql-ws": "^5.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^7.43.9",
     "react-lines-ellipsis": "^0.14.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
-    "subscriptions-transport-ws": "^0.9.16",
-    "uuid": "^7.0.1"
+    "uuid": "^7.0.1",
+    "validator": "^13.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
