--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@cloudinary/url-gen": "^1.10.0",
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "@rooks/use-outside-click": "^3.6.0",
     "@tanem/react-nprogress": "^3.0.16",
+    "cloudinary": "^1.37.0",
     "date-fns": "^2.10.0",
     "firebase": "^9.22.0",
     "graphql": "^16.6.0",
@@ -21,6 +23,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.25.2",
+    "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
+    "slate-react": "^0.94.2",
     "slick-carousel": "^1.8.1",
     "uuid": "^7.0.1",
     "validator": "^13.9.0"
