--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tanem/react-nprogress": "^3.0.16",
     "cloudinary": "^1.37.0",
     "date-fns": "^2.10.0",
+    "escape-html": "^1.0.3",
     "firebase": "^9.22.0",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.13.1",
