--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql-ws": "^5.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-graceful-image": "^1.5.0",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^7.43.9",
     "react-lines-ellipsis": "^0.14.1",
